# vigir_planning_msgs

./: CMakeLists.txt  README.md  package.xml
action/: Move.action
include/vigir_planning_msgs/: constraints_conversion.h
msg/: ExtendedPlanningOptions.msg  ExtendedPlanningResult.msg  ExtendedPlanningSceneDiff.msg  HeadControlCommand.msg  JointAngles.msg  JointPositionConstraint.msg  PlannerConfiguration.msg  RequestDrakeCartesianTrajectory.msg  RequestDrakeIK.msg  RequestDrakeTrajectory.msg  ResultDrakeIK.msg  ResultDrakeTrajectory.msg
srv/: RequestWholeBodyCartesianTrajectory.srv  RequestWholeBodyIK.srv  RequestWholeBodyTrajectory.srv
